fix overflow-x problem in tablet devices

--- a/style.css
+++ b/style.css
@@ -868,17 +868,17 @@ span.pagination {
     .offset-by-one-half.column, .offset-by-one-half.columns {
         margin-right: 52%;
     }
+}
+@media(min-width: 1250px) {
+    .container {
+        width: 87%;
+    }
     a .content {
       transition: transform .2s;
     }
 
     a .content:hover {
       transform: scale(1.1);
-    }
-}
-@media(min-width: 1250px) {
-    .container {
-        width: 87%;
     }
 }
  @media(max-width: 800px) {
@@ -916,6 +916,7 @@ span.pagination {
 /* NOTEhtml is set to 62.5% so that all the REM measurements throughout Skeletonare based on 10px sizing. So basically 1.5rem = 15px :) */
  html {
     font-size: 62.5%;
+    overflow-x: hidden;
 }
 body {
     font-size: 1.5em;
